{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "fcac4bc7-7bb9-45be-9560-e4331eda7e12",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "7cb41348-90dd-4089-b1fa-3c6581f71992",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "85c3f91c-6310-4ab0-ba03-436addc2d3c5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9f0cca43-e525-4a1b-a81e-70ac0a977422",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "136ba284-4d1e-4c7f-ba8c-9efc65e23fa0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}